# simpletemplates

./: CMakeLists.txt  README.md  build_all  build_test  cmake_clean
includes/: Binding.hpp  Parser.hpp  Renderable.hpp  Template.hpp  TemplateConfig.hpp  TemplateEngine.hpp  Token.hpp  common.hpp  library.h
modules/: Binding.cpp  Parser.cpp  Renderable.cpp  Template.cpp  TemplateConfig.cpp  TemplateEngine.cpp  Token.cpp  common.cpp  library.cpp
test_includes/: ParserSpec.hpp  RenderableSpec.hpp  Specification.hpp  TemplateConfigSpec.hpp  TemplateEngineSpec.hpp  TestSuite.hpp  tests_common.hpp
test_modules/: ParserSpec.cpp  RenderableSpec.cpp  Specification.cpp  TemplateConfigSpec.cpp  TemplateEngineSpec.cpp  TestSuite.cpp  tests_common.cpp
tests/: main.cpp
